# trace

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
cmd/: crawl_batch.py  crawl_single.py  discover_pir.py  enrich_bundle.py  generate_schemas.py  search_iocs.py  submit_review.py  update_taxonomy_cache.py  validate_all.py  validate_assets.py  validate_identity_assets.py  validate_pir.py  validate_stix.py  validate_user_accounts.py
docs/: README.ja.md  README.md  api-stability.ja.md  api-stability.md  beacon_handoff.ja.md  beacon_handoff.md  citations.ja.md  citations.md  crawl_design.ja.md  crawl_design.md  data-model.ja.md  data-model.md  dependencies.ja.md  dependencies.md  deploy.ja.md  deploy.md  ir-feedback-flow.md  pipeline-guide.ja.md  pipeline-guide.md  setup.ja.md  setup.md  structure.ja.md  structure.md  usage.ja.md  usage.md
input/: source_catalog.example.yaml
schema/: assets.schema.json  pir.schema.json  sources.schema.json  threat_taxonomy.cached.json
scripts/: check_pir_schema_drift.py
src/trace_engine/: config.py
src/trace_engine/cli/: __init__.py  __main__.py  _logging.py  _metrics.py
src/trace_engine/crawler/: batch.py  feed_detector.py  feed_expander.py  fetcher.py  retry.py  sources.py  state.py  taxonomy_sync.py
src/trace_engine/discovery/: __init__.py  candidates.py  catalog.py  feed_search.py  query.py
src/trace_engine/ingest/: ioc_extractor.py  report_reader.py
src/trace_engine/io/: __init__.py  inputs.py
src/trace_engine/llm/: client.py
src/trace_engine/llm/prompts/: relevance_check.md  stix_extraction.md
src/trace_engine/pir/: loader.py  relevance.py
src/trace_engine/review/: __init__.py  github.py  markdown_report.py
src/trace_engine/stix/: asset_resolver.py  external_ref_hash.py  extractor.py  identity_resolver.py  taxonomy_enrich.py
src/trace_engine/storage/: __init__.py  backend.py  gcs.py  local.py
src/trace_engine/validate/: __init__.py
src/trace_engine/validate/schema/: __init__.py  models.py
src/trace_engine/validate/semantic/: __init__.py  assets.py  findings.py  identity_assets.py  pir.py  relationships.py  taxonomy.py  user_accounts.py
src/trace_engine/validate/stix/: __init__.py  validator.py
tests/: conftest.py  test_asset_resolver.py  test_check_pir_schema_drift.py  test_cli.py  test_cli_metrics.py  test_confidence_parser.py  test_crawl_batch.py  test_crawl_batch_feed.py  test_crawler_sources.py  test_crawler_state.py  test_discover_pir_cli.py  test_discovery_feed_search.py  test_discovery_query.py  test_enrich_bundle_cli.py  test_external_ref_hash.py  test_extractor_enrich_integration.py  test_feed_detector.py  test_feed_expander.py  test_identity_resolver.py  test_initiative_c_e2e.py  test_input_resolver.py  test_ioc_extractor.py  test_llm_client.py  test_markdown_report.py  test_per_version_reject_message.py  test_pir_loader.py  test_pir_relevance.py  test_relationship_semantics_e2e.py  test_report_reader_ua.py  test_review_github.py  test_search_iocs.py  test_state_iocs_roundtrip.py  test_stix_extractor.py  test_stix_pir_context.py  test_storage.py  test_taxonomy_enrich.py  test_update_taxonomy_cache.py  test_validate_assets.py  test_validate_identity_assets.py  test_validate_pir.py  (+6 more)
tests/fixtures/: article_with_iocs.md  discovery_sample_rss.xml  discovery_source_catalog.yaml  invalid_pir_extra_score_component_field.json  invalid_pir_missing_schema_version.json  invalid_pir_unsupported_version.json  invalid_pir_unsupported_version_018.json  invalid_pir_unsupported_version_019.json  invalid_pir_unsupported_version_110.json  llm_response_with_iocs.json  sample_atom.xml  sample_rss.xml  sources.yaml  state_with_iocs.json  valid_assets.json  valid_bundle.json  valid_pir.json  valid_pir_017_renamed_recency.json  valid_pir_100_canonical.json  valid_pir_with_actor_triage.json
tests/fixtures/initiative_c/: extension_roundtrip_bundle.json  spec_compliant_bundle.json
tests/fixtures/legacy_rejected/: pir_018_ir_factors.json
tests/fixtures/relationship_semantics/: extension_roundtrip_bundle.json  pending_drop_bundle.json  spec_compliant_bundle.json
