[project]
name = "trace"
version = "3.3.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "google-genai>=1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "cryptography>=48.0.1",  # GHSA-537c-gmf6-5ccf fix; transitive via google-genai
    "markitdown[pdf]>=0.1.0",  # PDF/URL → clean Markdown for crawl_single.py
    "stix2-validator>=3.2",  # OASIS cti-stix-validator
    "pyyaml>=6.0",  # input/sources.yaml parsing
    "python-dotenv>=1.0",  # load .env into os.environ at startup
    "idna>=3.15",  # CVE-2026-45409 fix; transitive via anyio/httpx
    "feedparser>=6.0",  # RSS/Atom feed expansion (Initiative F — TRACE 1.10.0)
    "google-cloud-storage>=2.18.0",  # GCS StorageBackend (was optional [gcs] until TRACE 2.1.1)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "pip-audit>=2.7.0",
    "pip>=26.1.2",  # PYSEC-2026-196 + CVE-2026-6357 fix; transitive via pip-audit -> pip-api
    "msgpack>=1.2.1",  # GHSA-6v7p-g79w-8964 fix; transitive via pip-audit -> cachecontrol
]

# Initiative H Phase 6 (TRACE 1.12.0) — unified ``trace`` entry; legacy
# ``python -m cmd.<name>`` invocations were deprecated in 1.x and removed
# in TRACE 2.0.0.
[project.scripts]
trace = "trace_engine.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require real Vertex AI (run with: pytest -m integration)",
]
